// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingSuspense > can set a heading string for the error card 1`] = `
<DocumentFragment>
  <div
    class="card m-3"
    id="loading-suspense"
  >
    <div
      class="card-header"
    >
      my custom heading
    </div>
    <div
      class="card-body"
    >
      <div
        class="d-flex flex-row mb-3"
      >
        <div>
          <img
            alt="Vector image of a dog looking sad"
            class="not-found-img"
            src="/static/img/sad-puppy-dog.svg"
          />
          <a
            class="link-opacity-50 not-found-img-credit"
            href="https://www.wannapik.com/vectors/88"
          >
            Image designed by Wannapik
          </a>
        </div>
        <div>
          <p>
            Load widgets failed: server exploded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingSuspense > can use a signal to a heading for the error card 1`] = `
<DocumentFragment>
  <div
    class="card m-3"
    id="loading-suspense"
  >
    <div
      class="card-header"
    >
      my custom heading via signal
    </div>
    <div
      class="card-body"
    >
      <div
        class="d-flex flex-row mb-3"
      >
        <div>
          <img
            alt="Vector image of a dog looking sad"
            class="not-found-img"
            src="/static/img/sad-puppy-dog.svg"
          />
          <a
            class="link-opacity-50 not-found-img-credit"
            href="https://www.wannapik.com/vectors/88"
          >
            Image designed by Wannapik
          </a>
        </div>
        <div>
          <p>
            Load widgets failed: server exploded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingSuspense > shows ErrorCard when error is set (even if loaded) 1`] = `
<DocumentFragment>
  <div
    class="card m-3"
    id="loading-suspense"
  >
    <div
      class="card-header"
    >
      Load widgets
    </div>
    <div
      class="card-body"
    >
      <div
        class="d-flex flex-row mb-3"
      >
        <div>
          <img
            alt="Vector image of a dog looking sad"
            class="not-found-img"
            src="/static/img/sad-puppy-dog.svg"
          />
          <a
            class="link-opacity-50 not-found-img-credit"
            href="https://www.wannapik.com/vectors/88"
          >
            Image designed by Wannapik
          </a>
        </div>
        <div>
          <p>
            Load widgets failed: server exploded
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingSuspense > shows title and spinner while not loaded 1`] = `
<DocumentFragment>
  <div
    id="loading-suspense"
  >
    <h2
      class="title"
    >
      Fetching data...
    </h2>
    <div
      class="lds-ring"
    >
      <div
        class="lds-seg"
      />
      <div
        class="lds-seg"
      />
      <div
        class="lds-seg"
      />
      <div
        class="lds-seg"
      />
    </div>
  </div>
</DocumentFragment>
`;
